k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: levl-ingress
  namespace: levl
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - api.domain-anda.com
      secretName: levl-tls
  rules:
    - host: api.domain-anda.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: levl-app
                port:
                  number: 80
